# auto-research

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
.claude/rules/: architecture.md  coding-standards.md  skill-development.md
.claude/skills/arxiv-tracker/: SKILL.md
.claude/skills/arxiv-tracker/assets/: report-template.md
.claude/skills/daily-summary/: SKILL.md
.claude/skills/github-agent-trend/: SKILL.md
.claude/skills/web-monitor/: SKILL.md
config/: tasks.yaml
docs/: guide.md
src/: __init__.py  cli.py  task_runner.py  windows_task.py
src/core/: __init__.py  agent.py  runner.py
src/scheduler/: __init__.py  windows.py
