[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "auto-research"
version = "0.1.0"
description = "基于 Claude Agent SDK 的自定义定时任务框架"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.55",
    "pyyaml>=6.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
auto-research = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
